# samseg

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  VERSION  installing_from_source.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: linux.yml  linux_build.sh  macos.yml  macos_build.sh  windows.yml
cli/: computeTissueConcentrations.py  prepareAtlasDirectory.py  run_samseg
gems/: CMakeLists.txt  kvlCompressionLookupTable.cxx  kvlRegisterImages.h  kvlRegisterImages.hxx
samseg/: Affine.py  Fatshift.py  GMM.py  GMM_fat_shift.py  ProbabilisticAtlas.py  Samseg.py  SamsegLesion.py  SamsegLongitudinal.py  SamsegLongitudinalLesion.py  SamsegTumor.py  SamsegUtility.py  Samseg_utils.py  VAE.py  VAE_utils.py  __init__.py  _version.py  io.py  utilities.py  warp_mesh.py
samseg/_internal_resources/testing_files/: template_transforms.mat
samseg/_internal_resources/testing_files/cube_atlas/: modifiedFreeSurferColorLUT.txt
samseg/atlas/Lesion_Components/: lesion_alphas.npz
samseg/atlas/Lesion_Components/MS/: lesion_alphas.npz  tiedGMMParameters.txt
samseg/atlas/Lesion_Components/MS/VAE/: VAE_info.npz  model.h5
samseg/atlas/Tumor_Components/: tiedGMMParameters.txt
samseg/atlas/Tumor_Components/VAE/: model.h5
samseg/cli/: computeTissueConcentrations.py  create_dataset.py  gems_compute_atlas_probs.py  merge_add_mesh_alphas.py  prepareAtlasDirectory.py  run_samseg.py  run_samseg_long  run_samseg_long.py  sbtiv.py  segment_subregions.py  train_VAE.py
samseg/cxx/: CMakeLists.txt  Makefile  module.cxx  pyKvlAffineRegistration.cxx  pyKvlAffineRegistration.h  pyKvlCalculator.h  pyKvlImageRegisterer.cxx  pyKvlImageRegisterer.h  pyKvlOptimizer.h  pyKvlRigidRegistration.cxx  pyKvlRigidRegistration.h
samseg/gems/: __init__.py
samseg/subregions/: __init__.py  brainstem.py  core.py  hippocampus.py  process.py  thalamus.py  utils.py
samseg/tests/: test_samseg.py
