[metadata]
name = samseg
author = Koen Van Leemput, Oula Puonti, Juan Eugenio Iglesias, Stefano Cerri
maintainer = Koen Van Leemput, Oula Puonti, Juan Eugenio Iglesias, Stefano Cerri
license = MIT
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Sequence-Adaptive Multimodal SEGmenation (SAMSEG)
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/freesurfer/samseg

[options]
zip_safe = False
include_package_data = True
python_requires >= 3.6
packages = find:
install_requires =
    surfa
    scikit-learn
    numpy


[options.package_data]
* = ./samseg/atlas/*

[options.entry_points]
console_scripts=
    run_samseg = samseg.cli.run_samseg:main
    computeTissueConcentrations = samseg.cli.computeTissueConcentrations:main
    prepareAtlasDirectory = samseg.cli.prepareAtlasDirectory:main
    run_samseg_long = samseg.cli.run_samseg_long:main
    segment_subregions = samseg.cl.segment_subregions:main



[options.extras_require]
test =
     pytest
     tensorflow

[versioneer]
VCS = git
style = pep440
versionfile_source = samseg/_version.py
versionfile_build = samseg/_version.py
tag_prefix =
parentdir_prefix =
